setup for model view controller branch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
 </head>
 
 <body>
-    <img src="img/cat.jpg" alt="a cute cat">
-    <div class="counter">0</div>
+    <!-- Cat Selector Template -->
+    <select name="cats" id="cat-list"></select>
+
+
+    <!-- Cat View Template -->
+    <div class="cat">
+        <h2 class="cat-name"></h2>
+        <img src="" alt="cute cat" class="cat-img">
+        <div class="cat-count"></div>
+
+        <!-- <div class="counter">0</div>
     <script>
+        const cats = ['cat', 'cat2'];
+        const catPic = document.createElement('img');
+        catPic.setAttribute
+
         let counter = 0;
         const counterEl = document.querySelector('.counter');
         const cat = document.querySelector('img');
@@ -19,7 +32,7 @@
             counter += 1;
             counterEl.innerText = counter;
         })
-    </script>
+    </script> -->
 </body>
 
 </html>
