init, getters, setters,

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             counterEl.innerText = counter;
         })
     </script> -->
+
+        <script src="index.js"></script>
 </body>
 
 </html>
