finalize model, view, controller

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- Cat Selector Template -->
     <select name="cats" id="cat-list"></select>
 
-
     <!-- Cat View Template -->
     <div class="cat">
         <h2 class="cat-name"></h2>
         <img src="" alt="cute cat" class="cat-img">
         <div class="cat-count"></div>
+    </div>
 
-        <!-- <div class="counter">0</div>
+    <!-- <div class="counter">0</div>
     <script>
         const cats = ['cat', 'cat2'];
         const catPic = document.createElement('img');
@@ -34,7 +34,7 @@
         })
     </script> -->
 
-        <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
