--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 </head>
 
 <body>
-    <img src="img/cat.jpg" alt="a cute cat">
-    <div class="counter">0</div>
-    <script>
-        let counter = 0;
-        const counterEl = document.querySelector('.counter');
-        const cat = document.querySelector('img');
-        cat.addEventListener('click', () => {
-            counter += 1;
-            counterEl.innerText = counter;
-        })
-    </script>
+    <ul>
+        <div>
+            <h2></h2>
+            <h3></h3>
+            <div></div>
+            <img src="" alt="cute cat">
+        </div>
+    </ul>
 </body>
 
 </html>
