--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
 
 <body>
     <ul>
-        <div>
-            <h2></h2>
-            <h3></h3>
-            <div></div>
-            <img src="" alt="cute cat">
-        </div>
     </ul>
+
+    <div>
+        <!-- 'data-bind' is the way that the ViewModel talks to the HTML -->
+        <h2 data-bind="text: name"></h2>
+        <h3 data-bind="text: level"></h3>
+        <div data-bind="text: clickCount"></div>
+        <img src="" alt="cute cat" data-bind="click: incrementCounter, attr:{src: imgSrc}">
+        <div>
+            <h3>Nicknames:</h3>
+            <ul data-bind: "foreach: currentCat().nickNames">
+                <li data-bind="text: nickNames">
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- order of the script tags matters! We want browser to look at knockout js first then our index js file-->
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js "></script>
+    <script src="index.js "></script>
 </body>
 
 </html>
